# soniox_live

./: .gitignore  Cargo.toml  Info.plist  README.md  build.rs  dist-workspace.toml
src/: errors.rs  lib.rs  main.rs  settings.rs
src/gui/: app.rs  mod.rs  overlay.rs  settings.rs  state.rs
src/soniox/: worker.rs
src/stt/: action.rs  data.rs  event.rs  factory.rs  languages.rs  mod.rs  provider.rs  store.rs  utils.rs  worker.rs
src/stt/adapters/: mod.rs  soniox.rs  types.rs  whisper.rs
src/stt/adapters/soniox/: connection.rs  request.rs  session.rs  types.rs
src/transcription/: audio.rs  mod.rs  replicas.rs  service.rs  store.rs  utils.rs
src/types/: device.rs  mod.rs  tracing.rs
